--- a/pr33-ChatStudents_Lipina/Pages/Main.xaml
+++ b/pr33-ChatStudents_Lipina/Pages/Main.xaml
@@ -8,7 +8,38 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Main">
 
-    <Grid>
-        
+    <Grid Background="White">
+        <Grid Background="#FF0071FF" Height="50" VerticalAlignment="Top">
+            <Image Margin="10" Width="30" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Images/logo.png"/>
+            <Label Content="ВПат'е" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="50,5,0,0" Foreground="White" FontWeight="Bold" FontSize="20"/>
+        </Grid>
+        <Grid Margin="0,50,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="250"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <ScrollViewer VerticalScrollBarVisibility="Hidden">
+                <StackPanel x:Name="ParentUsers">
+
+                </StackPanel>
+            </ScrollViewer>
+            <Grid Grid.Column="1" x:Name="Chat" Visibility="Hidden">
+                <Grid Height="50" VerticalAlignment="Top">
+                    <Image x:Name="imgUser" Margin="10,0,0,0" Width="30" Height="30" HorizontalAlignment="Left" Source="/Images/ic-user.png">
+                        <Image.Clip>
+                            <RectangleGeometry RadiusX="15" RadiusY="15" Rect="0,0,30,30"/>
+                        </Image.Clip>
+                    </Image>
+                    <Image Width="10" Height="10" Margin="30,30,0,0" HorizontalAlignment="Left" Source="/Images/ic-online.png" Visibility="Hidden"/>
+                    <Label x:Name="FIO" Content="Иванов Иван Иванович" Margin="45,0,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="10"/>
+                </Grid>
+                <ScrollViewer Margin="0,50,0,50">
+                    <StackPanel x:Name="ParentMessages">
+
+                    </StackPanel>
+                </ScrollViewer>
+                <TextBox x:Name="Message" Height="35" VerticalContentAlignment="Center" Margin="10,0,10,10" TextWrapping="Wrap" VerticalAlignment="Bottom" KeyUp="Send" Grid.Column="1"/>
+            </Grid>
+        </Grid>
     </Grid>
 </Page>
